dtag/src/Learner/Hierarchy/UnitBox/test/.pbox_union.dtag.out0
1 = 1
1/2 = 0.5
2 = 2
0.140625 = 0.154771505376344
